# ChemPy

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_SUMMARY_NON_TECHNICAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  MODERNIZATION.md  MODERNIZATION_CHECKLIST.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_STRUCTURE.md  Makefile  README.md  RECOMMENDATIONS.md  SECURITY.md  SESSION_SUMMARY.md  STRUCTURE.md  TEST_RESULTS_SUMMARY.md  TODO.md  TYPE_HINTS.md  benchmark_states.json  benchmark_subset.csv  codecov.yml  constants.html  contents.html  coverage.xml  element.html  exception.html  genindex.html  geometry.html  graph.html  index.html  introduction.html  kinetics.html  molecule.html  objects.inv  (+15 more)
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_latest.json  0002_latest.json  0003_latest.json  0004_latest.json  0005_latest.json  0006_latest.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  lint-and-test.yml  pre-commit.yml  smoke.yml  stubs.yml  tests.yml
benches/: chempy_benchmarks.rs
benchmarks/: README.md  __init__.py  benchmark_graph.py  benchmark_kinetics.py
chempy/: __init__.py  _cython_compat.py  constants.py  element.py  exception.py  geometry.py  graph.pxd  graph.py  kinetics.pxd  kinetics.py  molecule.pxd  molecule.py  pattern.pxd  pattern.py  reaction.pxd  reaction.py  species.pxd  species.py  states.pxd  states.py  thermo.py
chempy/ext/: __init__.py  molecule_draw.py  molecule_draw.pyi  thermo_converter.py  thermo_converter.pyi
chempy/io/: __init__.py  gaussian.py  gaussian.pyi
docs/: DEVELOPMENT.md  README.md  STRUCTURE.md  __init__.py  conf.py
documentation/source/: conf.py  contents.rst  introduction.rst  thermo.rst
documentation/source/_static/: default.css
documentation/source/_templates/: index.html  indexsidebar.html  layout.html
python/: .pre-commit-config.yaml  MANIFEST.in  Makefile  pyproject.toml  setup.cfg
python/benchmarks/: README.md  benchmark_kinetics.py  compare_benchmarks.py  conftest.py
python/chempy/: __init__.py  constants.py  geometry.pxd  kinetics.py  molecule.py  pattern.pxd  species.py  thermo.pxd
python/chempy/ext/: molecule_draw.py  thermo_converter.pxd  thermo_converter.py  thermo_converter.pyi
python/chempy/io/: gaussian.pyi
python/docs/: .gitkeep  DEVELOPMENT.md  TYPE_HINTS.md  conf.py
python/documentation/source/: exception.rst  pattern.rst
python/scripts/: compare_benchmarks.py
python/tests/: __init__.py  conftest.py  test_element.py  test_graph_iso.py  test_kinetics_models.py  test_species.py  test_species_smoke.py  test_thermo_smoke.py
python/unittest/: gaussianTest.py  patternTest.py  reactionTest.py  test.py  thermoConverterTest.py
scripts/: compare_benchmarks.py
src/: constants.rs  element.rs  geometry.rs  graph.rs  kinetics.rs  lib.rs  molecule.rs  pattern.rs  reaction.rs  species.rs  states.rs  thermo.rs  thermo_converter.rs
src/io/: gaussian.rs
tests/: conftest.py  test_constants.py  test_kinetics_models.py  test_kinetics_smoke.py  test_molecule_min.py  test_reaction_smoke.py  test_states_smoke.py  test_thermo_models.py  test_tst_smoke.py
unittest/: benchmarksTest.py  conftest.py  gaussianTest.py  geometryTest.py  graphTest.py  moleculeTest.py  reactionTest.py  statesTest.py  test.py  thermoTest.py
