[package]
name = "chempy"
version = "0.1.0"
edition = "2024"

[lib]
name = "chempy_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1.11"
nalgebra = "0.33"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "chempy_benchmarks"
harness = false
