[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemPy"
version = "0.1.0"
description = "A chemistry toolkit for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joshua W. Allen", email = "jwallen@mit.edu"}
]
keywords = ["chemistry", "chemical-engineering", "materials-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
full = [
    "openbabel-wheel",
    "cairo",
]

[tool.setuptools]
packages = ["chempy"]

[tool.setuptools.ext-modules]
# Cython modules configured via setup.py still needed for compilation

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["unittest"]
python_files = ["*Test.py", "test_*.py"]
addopts = "-v --tb=short"
