[build-system]
# Flexible build requirements that gracefully degrade when Cython is unavailable
requires = ["setuptools>=64.0", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemPy"
version = "0.2.0"
description = "A comprehensive chemistry toolkit for Python with support for molecular structures, thermodynamics, and chemical kinetics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joshua W. Allen", email = "jwallen@mit.edu"}
]
maintainers = [
    {name = "Community Contributors"}
]
keywords = ["chemistry", "chemical-engineering", "materials-science", "thermodynamics", "kinetics", "molecular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/elkins/ChemPy"
Repository = "https://github.com/elkins/ChemPy.git"
Documentation = "https://chempy.readthedocs.io"
"Bug Tracker" = "https://github.com/elkins/ChemPy/issues"
Changelog = "https://github.com/elkins/ChemPy/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.1",
    "pytest-cov>=4.0,<5.0",
    "pytest-xdist>=3.0,<4.0",
    "pytest-benchmark[histogram]>=4.0,<5.0",
    "black>=23.0,<25.0",
    "isort>=5.12,<6.0",
    "flake8>=6.0,<7.1",
    "pylint>=2.16,<3.0",
    "mypy>=1.0,<1.11",
    "pre-commit>=3.0,<4.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.20",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-benchmark>=4.0",
]
full = [
    "openbabel-wheel",
    "cairo",
]

[tool.setuptools]
packages = ["chempy", "chempy.ext"]
include-package-data = true

[tool.setuptools.package-data]
chempy = ["*.pxd", "*.pyx", "py.typed", "*.pyi", "ext/*.pyi", "io/*.pyi"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)'

[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["chempy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
# Allow some errors for now due to incomplete type coverage
disable_error_code = ["attr-defined"]

[tool.pylint.messages_control]
disable = ["C0111", "R0913", "R0914"]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["unittest"]
python_files = ["*Test.py", "test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    # Suppress Open Babel deprecation warnings (external library issue)
    "ignore:\"import openbabel\" is deprecated.*:UserWarning",
    # Suppress SWIG wrapper deprecation warnings (external library issue)
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["chempy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
