[metadata]
name = ChemPy
version = 0.2.0
author = Joshua W. Allen
author_email = jwallen@mit.edu
description = A comprehensive chemistry toolkit for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elkins/ChemPy
project_urls =
    Bug Tracker = https://github.com/elkins/ChemPy/issues
    Documentation = https://chempy.readthedocs.io
    Repository = https://github.com/elkins/ChemPy.git
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    numpy>=1.20.0,<2.0.0
    scipy>=1.7.0

[options.packages.find]
where = .
include = chempy*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-xdist>=3.0
    black>=23.0
    isort>=5.12
    flake8>=6.0
    pylint>=2.16
    mypy>=1.0
    pre-commit>=3.0
docs =
    sphinx>=6.0
    sphinx-rtd-theme>=1.2
    sphinx-autodoc-typehints>=1.20
test =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-xdist>=3.0
full =
    openbabel-wheel
    cairo

[bdist_wheel]
universal = False
